usunięcie śmieci z aco_report.tex

--- a/report/aco_report.tex
+++ b/report/aco_report.tex
@@ -1,38 +1,22 @@
 \documentclass[10pt,a4paper]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[OT4]{fontenc}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{titling}
-\usepackage{anysize}
-\usepackage{parskip}
-\usepackage{graphicx}
 \usepackage[polish]{babel}
-\usepackage{float}
-\usepackage[figurename=Wykres]{caption}
-% some settings
-\setlength{\droptitle}{-2cm}
-\preauthor{}
-\DeclareRobustCommand{\authorthing}{
-\begin{center}
-\begin{tabular}{cc}
-\large{Szymon Gramza} & \large{Maciej Sobkowski} \\
-109785 & 112711\\
-szymon.gramza@student.put.poznan.pl & maciej.sobkowski@student.put.poznan.pl
-\end{tabular}\\
-\vspace{8pt}
-\large{Prowadzący: dr inż.\ Marcin Radom}\\
-Wydział Informatyki Politechniki Poznańskiej
-\end{center}}
-\author{\authorthing}
-\date{14 stycznia 2014}
-\postauthor{}
-\title{Flow-Shop Scheduling\\Laboratorium Optymalizacji Kombinatorycznej}
-\marginsize{2cm}{2cm}{1cm}{1cm}
+\usepackage[T1]{fontenc}
+\usepackage{graphicx}
+\nonstopmode
 
-\setlength{\parindent}{0pt}
-% document
+\title{Flow-Shop Scheduling\\Laboratorium Optymalizacji Kombinatorycznej}
+
+\author{
+  Szymon Gramza\\
+  szymon.gramza@student.put.poznan.pl
+\and
+  Maciej Sobkowski\\
+  maciej.sobkowski@student.put.poznan.pl
+\and
+  Prowadzący: Marcin Radom
+}
+
 \begin{document}
 \maketitle
 \section{Wprowadzenie}
