--- a/report/aco_report.tex
+++ b/report/aco_report.tex
@@ -2,6 +2,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[polish]{babel}
 \usepackage[T1]{fontenc}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
 \usepackage{graphicx}
 \nonstopmode
 
@@ -29,8 +32,9 @@ wykonywane posiadają wymuszone przestoje.  Do rozwiązania powyższego problemu
 wykorzystaliśmy zainspirowaną zachowaniem się mrówek poszukujących pożywienia
 metaheurystykę ACO\@. Algorytm mrówkowy będziemy porównywać z rozwiązaniem
 uzyskanym za pomocą algorytmów losowego oraz rozwiązaniem optymalnym obliczonym
-za pomocą wzoru: \[ opt = \frac{\text{suma czasów wszystkich
-operacji}}{\text{liczba maszyn}} \]
+za pomocą wzoru: 
+\[ opt = \frac{\text{suma\ czasów\ wszystkich
+operacji}}{\text{liczba\ maszyn}} \]
 
 \subsection{Program testujący}
 \subsubsection{Opis}
