--- a/report/aco_report.tex
+++ b/report/aco_report.tex
@@ -71,7 +71,7 @@ Przystosowanie algorytmu do problemu szeregowania zadań sprowadza się w naszym
 przypadku do przedstawienia operacji danej instancji w postaci grafu, którego
 przykład umieszczono poniżej:\\
 \begin{center}
-    \includegraphics [scale=0.4]{pic01.png}\\
+    \includegraphics [scale=0.4]{./figures/pic01.png}\\
 \end{center}
 Informacje o ilości feromonów utrzymywane są w macierzach NxN (N - liczba
 zadań), odpowiadających poszczególnym maszynom. Każda mrówka wyboru drogi,
