--- a/report/aco_report.tex
+++ b/report/aco_report.tex
@@ -88,13 +88,13 @@ Każda mrówka wybierając drogę stosuję regułę zmiany stanu (State Transiti
 \begin{equation}
  s = \left\{ 
   \begin{array}{l l}
-    arg\ max_{u \in J(r)}, & \quad \text{jeśli $q\leq q_0$}\\
+    arg\ max_{u \in J(r)} \{ [\tau (r,u)] \cdot [\eta (r,u)^\beta] \} , & \quad \text{jeśli $q\leq q_0$}\\
     S, & \quad \text{w przeciwnym razie}
   \end{array} \right.
 \end{equation} \\
 gdzie:
 \begin{itemize}
-  \item a 
+  \item a  
   \item b
   \item c
 \end{itemize}
