next charts added

--- a/report/aco_report.tex
+++ b/report/aco_report.tex
@@ -187,10 +187,10 @@ Różne klasy instancji danych wejściowych.
   czasy operacji & $ \langle 5;100 \rangle $  \\
   liczba mrówek & 10 \\
   liczba pokoleń & 5000 \\
-  $ \rho $ & 0,01 \\
-  $ \alpha $ & 0,1 \\
-  $ q_0 $ & 0,8 \\
-  $ \tau_0 $ & 0,001 \\
+  $ \rho $ & 0.01 \\
+  $ \alpha $ & 0.1 \\
+  $ q_0 $ & 0.8 \\
+  $ \tau_0 $ & 0.001 \\
   $ \beta $ & 2 \\
   \hline
 \end{tabular}
@@ -240,17 +240,17 @@ Różne wartości parametru $\beta$.
   czasy operacji & $ \langle 5;100 \rangle $  \\
   liczba mrówek & 10 \\
   liczba pokoleń & 5000 \\
-  $ \rho $ & 0,01 \\
-  $ \alpha $ & 0,1 \\
-  $ q_0 $ & 0,8 \\
-  $ \tau_0 $ & 0,001 \\
+  $ \rho $ & 0.01 \\
+  $ \alpha $ & 0.1 \\
+  $ q_0 $ & 0.8 \\
+  $ \tau_0 $ & 0.001 \\
   \hline
 \end{tabular}
 \end{center}
 
 \begin{figure}[h]
     \centering
-   % \includegraphics{./figures/inst01_rnd_beta.pdf}
+    \includegraphics{./figures/inst01_rnd_beta.pdf}
     \caption{$ \beta = \{ 0, 2, 4, 6 \} $}
 \end{figure}
 
@@ -259,5 +259,26 @@ Różne wartości parametru $\beta$.
 \subsubsection{Grupa instancji 3}
 Różne wartości parametru $\alpha$.
 
+\begin{center}
+\begin{tabular}{|r|l|}
+  \hline
+  klasa instancji & losowa \\
+  liczba zadań & 50 \\
+  czasy operacji & $ \langle 5;100 \rangle $  \\
+  liczba mrówek & 10 \\
+  liczba pokoleń & 5000 \\
+  $ \rho $ & 0.01 \\
+  $ \beta $ & 2 \\
+  $ q_0 $ & 0.8 \\
+  $ \tau_0 $ & 0.001 \\
+  \hline
+\end{tabular}
+\end{center}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics{./figures/inst01_rnd_beta.pdf}
+    \caption{$ \alpha = \{ 0.1, 0.25, 0.5, 0.75 \} $}
+\end{figure}
 
 \end{document}
