--- a/report/aco_report.tex
+++ b/report/aco_report.tex
@@ -217,18 +217,63 @@ Algorytm losowy, niezależnie od rodzaju danych wejściowych oraz ilości iterac
 Metaheurystyka w zależności od klasy instancji zwraca wynik procentowo?
 
 \begin{tabular}{rrrll}
-\toprule
+%\toprule
 Iteracja & ACO & RND  & opt/ACO(\%) & opt/RND(\%) \\
-\midrule
+%\midrule
+
 50	& 3,796.33	& 4,294.33	& 68.03	& 60.14 \\
 1000	& 3,192.15	& 4,419.17	& 80.91	& 58.44 \\
 2000	& 3,089.85	& 4,388.67	& 83.59	& 58.85 \\
 3000	& 3,101.63	& 4,331.83	& 83.27	& 59.62 \\
 4000	& 3,077.53	& 4,458.83	& 83.92	& 57.92 \\
 5000	& 3,016.63	& 4,238.50	& 85.61	& 60.93 \\
-\bottomrule
+%\bottomrule
 \end{tabular}
 
+\begin{tabular}{rrrll}
+%opt 2510.333
+%\toprule
+Iteracja & ACO & ASC  & opt/ACO(\%) & opt/ASC(\%) \\
+%\midrule
+
+50	& 3,397.37	& 4,300.33	& 73.89 &	58.38\\
+1000	& 2,756.32	& 4,252.50 &	91.08 &	59.03\\
+2000	& 2,757.57	& 4,480.17	& 91.03 & 56.03\\
+3000	& 2,757.55	& 4,448.83	& 91.03 &	56.43\\
+4000	& 2,757.02	& 4,457.83	& 91.05 &	56.31\\
+5000	& 2,755.25	& 4,126.83	& 91.11 &	60.83\\
+%\bottomrule
+\end{tabular}
+
+\begin{tabular}{rrrll}
+%opt 2528.667
+%\toprule
+Iteracja & ACO & DSC  & opt/ACO(\%) & opt/DSC(\%) \\
+%\midrule
+50	& 3,418.53	& 4,367.67	& 73.97 &	57.90\\
+1000	& 2,778.82	& 4,341.67	& 91.00 &	58.24\\
+2000	& 2,780.03	& 4,394.00	& 90.96 & 57.55\\
+3000	& 2,777.32	& 4,295.50	& 91.05 &	58.87\\
+4000	& 2,770.00	& 4,411.33	& 91.29 &	57.32\\
+5000	& 2,774.88	& 4,333.50	& 91.13 &	58.35\\
+
+%\bottomrule
+\end{tabular}
+
+\begin{tabular}{rrrll}
+%opt 1348.333
+%\toprule
+Iteracja & ACO & VSH  & opt/ACO(\%) & opt/VSH(\%) \\
+%\midrule
+50	& 1,859.73	& 2,282.00	& 72.50 &	59.09\\
+1000	& 1,530.27	& 2,277.67	& 88.11 &	59.20\\
+2000	& 1,529.47	& 2,341.00 &	88.16 &	57.60\\
+3000	& 1,528.95	& 2,304.33 &	88.19 &	58.51\\
+4000	& 1,529.55	& 2,340.17 &	88.15 &	57.62\\
+5000	& 1,527.00	& 2,268.83 & 88.30 &	59.43\\
+
+%\bottomrule
+\end{tabular}
 
 \newpage
 \subsubsection{Grupa instancji 2}
@@ -252,7 +297,7 @@ Różne wartości parametru $\beta$.
 
 \begin{figure}[h]
     \centering
-    \includegraphics{./figures/inst01_rnd_beta.pdf}
+    \includegraphics{./figures/inst01_rnd_beta_smooth.pdf}
     \caption{$ \beta = \{ 0, 2, 4, 6 \} $}
 \end{figure}
 
@@ -279,8 +324,35 @@ Różne wartości parametru $\alpha$.
 
 \begin{figure}[h]
     \centering
-    \includegraphics{./figures/inst01_rnd_alpha.pdf}
+    \includegraphics{./figures/inst01_rnd_alpha_smooth.pdf}
     \caption{$ \alpha = \{ 0.0, 0.1, 0.25, 0.5, 0.75 \} $}
 \end{figure}
+
+\newpage
+\subsubsection{Grupa instancji 4}
+Różne wartości parametru $q_0$.
+
+\begin{center}
+\begin{tabular}{|r|l|}
+  \hline
+  klasa instancji & losowa \\
+  liczba zadań & 50 \\
+  czasy operacji & $ \langle 5;100 \rangle $  \\
+  liczba mrówek & 10 \\
+  liczba pokoleń & 5000 \\
+  $ \rho $ & 0.01 \\
+  $ \beta $ & 2 \\
+  $ \alpha $ & 0.1 \\
+  $ \tau_0 $ & 0.001 \\
+  \hline
+\end{tabular}
+\end{center}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics{./figures/inst01_rnd_alpha_smooth.pdf}
+    \caption{$ q_0 = \{ 0.0, 0.25, 0.5, 0.75 \} $}
+\end{figure}
+
 
 \end{document}
