last chart added

--- a/report/aco_report.tex
+++ b/report/aco_report.tex
@@ -353,7 +353,88 @@ Różne wartości parametru $q_0$.
     \centering
     \includegraphics{./figures/inst01_rnd_qinit_smooth.pdf}
     \caption{$ q_0 = \{ 0.0, 0.25, 0.5, 0.75 \} $}
+\end{figure}$ q_0 $ & 0.8 \\
+
+
+
+\newpage
+\subsubsection{Grupa instancji 5}
+Różne wartości parametru $\tau_0$.
+
+\begin{center}
+\begin{tabular}{|r|l|}
+  \hline
+  klasa instancji & losowa \\
+  liczba zadań & 50 \\
+  czasy operacji & $ \langle 5;100 \rangle $  \\
+  liczba mrówek & 10 \\
+  liczba pokoleń & 5000 \\
+  $ \rho $ & 0.01 \\
+  $ \beta $ & 2 \\
+  $ \alpha $ & 0.1 \\
+  $ q_0 $ & 0.8 \\
+  \hline
+\end{tabular}
+\end{center}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics{./figures/inst_01_rnd_phinit_smooth.pdf}
+    \caption{$ \tau_0 = \{ 0.0, 0.001, 0.01, 0.05, 0.1 \} $}
 \end{figure}
 
+
+\newpage
+\subsubsection{Grupa instancji 6}
+Różne wartości parametru $\rho$.
+
+\begin{center}
+\begin{tabular}{|r|l|}
+  \hline
+  klasa instancji & losowa \\
+  liczba zadań & 50 \\
+  czasy operacji & $ \langle 5;100 \rangle $  \\
+  liczba mrówek & 10 \\
+  liczba pokoleń & 5000 \\
+  $ \tau_0 $ & 0.001 \\
+  $ \beta $ & 2 \\
+  $ \alpha $ & 0.1 \\
+  $ q_0 $ & 0.8 \\
+  \hline
+\end{tabular}
+\end{center}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics{./figures/inst_01_rnd_evapor_smooth.pdf}
+    \caption{$ \rho = \{ 0.0, 0.01, 0.02, 0.05, 0.1 \} $}
+\end{figure}
+
+
+\newpage
+\subsubsection{Grupa instancji 7}
+Różne wartości parametru $liczby\ mrówek$.
+
+\begin{center}
+\begin{tabular}{|r|l|}
+  \hline
+  klasa instancji & losowa \\
+  liczba zadań & 50 \\
+  czasy operacji & $ \langle 5;100 \rangle $  \\
+  liczba pokoleń & 5000 \\
+  $ \rho $ & 0.01 \\
+  $ \tau_0 $ & 0.001 \\
+  $ \beta $ & 2 \\
+  $ \alpha $ & 0.1 \\
+  $ q_0 $ & 0.8 \\
+  \hline
+\end{tabular}
+\end{center}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics{./figures/inst_01_rnd_antno_smooth.pdf}
+    \caption{$ liczba\ mrówek = \{ 5, 10, 20, 40 \} $}
+\end{figure}
 
 \end{document}
