--- a/report/aco_report.tex
+++ b/report/aco_report.tex
@@ -179,9 +179,8 @@ podzieliliśmy na 4 grupy w zależności od rodzaju danych wejściowych: losowe,
 rosnące, malejące, v-kształtne.
 
 \newpage
-\subsubsection{Grupa instancji 1}
-Różne klasy instancji danych wejściowych.
-
+\subsubsection{Różne klasy instancji danych wejściowych.}
+\vspace{6 mm}
 \begin{center}
 \begin{tabular}{|r|l|}
   \hline
@@ -199,10 +198,9 @@ Różne klasy instancji danych wejściowych.
 \end{center}
 
 \begin{center}
-\\
 \includegraphics{./figures/inst01_rnd_smooth.pdf}
 \caption{losowy}
-
+\vspace{6 mm}
 \includegraphics{./figures/inst02_asc_smooth.pdf}
 \caption{rosnący}
 \\
@@ -211,9 +209,8 @@ Różne klasy instancji danych wejściowych.
 \\
 \includegraphics{./figures/inst04_vsh_smooth.pdf}
 \caption{v-kształtne}
-\\
 \end{center}
-
+\vspace{5 mm}
 Algorytm losowy, niezależnie od rodzaju danych wejściowych oraz ilości iteracji, osiąga średnio podobne wyniki. Jest to spowodowane brakiem poprawy algorytmu z upływem czasu. Natomiast ACO w kolejnych iteracjach zwraca wynik dążący do optimum.
 Metaheurystyka w zależności od klasy instancji zwraca wynik procentowo?
 
@@ -277,9 +274,8 @@ Iteracja & ACO & VSH  & opt/ACO(\%) & opt/VSH(\%) \\
 \end{tabular}
 
 \newpage
-\subsubsection{Grupa instancji 2}
-Różne wartości parametru $\beta$.
-
+\subsubsection{Różne wartości parametru $\beta$.}
+\vspace{6 mm}
 \begin{center}
 \begin{tabular}{|r|l|}
   \hline
@@ -304,9 +300,8 @@ Różne wartości parametru $\beta$.
 
 
 \newpage
-\subsubsection{Grupa instancji 3}
-Różne wartości parametru $\alpha$.
-
+\subsubsection{Różne wartości parametru $\alpha$.}
+\vspace{6 mm}
 \begin{center}
 \begin{tabular}{|r|l|}
   \hline
@@ -330,9 +325,8 @@ Różne wartości parametru $\alpha$.
 \end{figure}
 
 \newpage
-\subsubsection{Grupa instancji 4}
-Różne wartości parametru $q_0$.
-
+\subsubsection{Różne wartości parametru $q_0$.}
+\vspace{6 mm}
 \begin{center}
 \begin{tabular}{|r|l|}
   \hline
@@ -358,9 +352,8 @@ Różne wartości parametru $q_0$.
 
 
 \newpage
-\subsubsection{Grupa instancji 5}
-Różne wartości parametru $\tau_0$.
-
+\subsubsection{Różne wartości parametru $\tau_0$.}
+\vspace{6 mm}
 \begin{center}
 \begin{tabular}{|r|l|}
   \hline
@@ -385,9 +378,8 @@ Różne wartości parametru $\tau_0$.
 
 
 \newpage
-\subsubsection{Grupa instancji 6}
-Różne wartości parametru $\rho$.
-
+\subsubsection{Różne wartości parametru $\rho$.}
+\vspace{6 mm}
 \begin{center}
 \begin{tabular}{|r|l|}
   \hline
@@ -412,9 +404,8 @@ Różne wartości parametru $\rho$.
 
 
 \newpage
-\subsubsection{Grupa instancji 7}
-Różne wartości parametru $liczby\ mrówek$.
-
+\subsubsection{Różne wartości parametru liczby mrówek.}
+\vspace{6 mm}
 \begin{center}
 \begin{tabular}{|r|l|}
   \hline
@@ -434,7 +425,15 @@ Różne wartości parametru $liczby\ mrówek$.
 \begin{figure}[h]
     \centering
     \includegraphics{./figures/inst_01_rnd_antno_smooth.pdf}
-    \caption{$ liczba\ mrówek = \{ 5, 10, 20, 40 \} $}
+    \caption{liczba mrówek $= \{ 5, 10, 20, 40 \} $}
 \end{figure}
+
+\newpage
+\section{Ocena efektywności}
+Jakie parametry optymalne...
+
+\section{Wnioski}
+No sprawko jest piękne! :)
+
 
 \end{document}
